alterando versao node-gyp 6.0.0-dev

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -13,30 +13,36 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
+        node:
+          - 12
+          - 14
+          - 15
+          - 16
+
         include:
+          - node: 12
+            gcc: "gcc-6"
+            gpp: "g++-6"
+            os: ubuntu-18.04
+          - node: 14
+            gcc: "gcc-6"
+            gpp: "g++-6"
+            os: ubuntu-18.04
+          - node: 15
+            gcc: "gcc-6"
+            gpp: "g++-6"
+            os: ubuntu-18.04
           - node: 16
             gcc: "gcc-8"
             gpp: "g++-8"
-            os: ubuntu-20.04
-          - node: 18
-            gcc: "gcc-8"
-            gpp: "g++-8"
-            os: ubuntu-20.04
-          - node: 19
-            gcc: "gcc-8"
-            gpp: "g++-8"
-            os: ubuntu-20.04
-          - node: 20
-            gcc: "gcc-10"
-            gpp: "g++-10"
-            os: ubuntu-22.04
+            os: ubuntu-18.04
 
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
 
       - name: Setup Node.js environment
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v2.1.5
         with:
           node-version: ${{ matrix.node }}
 
@@ -55,7 +61,7 @@ jobs:
       - name: Run tests
         run: npm test
 
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v2
         if: github.repository_owner == 'sass' && github.event_name != 'pull_request'
         with:
           name: ${{ matrix.node }}
