--- a/.github/workflows/alpine.yml
+++ b/.github/workflows/alpine.yml
@@ -10,21 +10,31 @@ jobs:
   build:
     runs-on: ubuntu-latest
     container:
-      image: node:${{ matrix.node }}-alpine
+      image: node:${{ matrix.node }}-alpine${{ matrix.alpine }}
     strategy:
       fail-fast: false
       matrix:
         node:
+          - 12
+          - 14
+          - 15
           - 16
-          - 18
-          - 19
-          - 20
+
+        include:
+          - node: 12
+            alpine: "3.9"
+          - node: 14
+            alpine: "3.10"
+          - node: 15
+            alpine: "3.10"
+          - node: 16
+            alpine: "3.11"
 
     steps:
       - name: Install Alpine build tools
-        run: apk add --no-cache python3 make git gcc g++
+        run: apk add --no-cache python make git gcc g++
 
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
 
       - name: Install packages
         run: npm install --unsafe-perm
@@ -34,7 +44,7 @@ jobs:
       - name: Run tests
         run: npm test
 
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v2
         if: github.repository_owner == 'sass' && github.event_name != 'pull_request'
         with:
           name: ${{ matrix.node }}
