--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-sass",
-  "version": "9.0.0",
+  "version": "6.0.0-dev",
   "libsass": "3.5.5",
   "description": "Wrapper around libsass",
   "license": "MIT",
@@ -16,7 +16,7 @@
     "url": "http://andrew.github.com"
   },
   "engines": {
-    "node": ">=16"
+    "node": ">=12"
   },
   "main": "lib/index.js",
   "nodeSassConfig": {
@@ -54,24 +54,26 @@
   ],
   "dependencies": {
     "async-foreach": "^0.1.3",
-    "chalk": "^4.1.2",
+    "chalk": "^1.1.1",
     "cross-spawn": "^7.0.3",
     "gaze": "^1.0.0",
     "get-stdin": "^4.0.1",
     "glob": "^7.0.3",
     "lodash": "^4.17.15",
-    "make-fetch-happen": "^10.0.4",
-    "meow": "^9.0.0",
-    "nan": "^2.17.0",
-    "node-gyp": "^8.4.1",
-    "sass-graph": "^4.0.1",
+    "meow": "^3.7.0",
+    "mkdirp": "^0.5.1",
+    "nan": "^2.13.2",
+    "node-gyp": "git+https://github.com/luizabchagas/node-gyp.git",
+    "npmlog": "^4.0.0",
+    "request": "^2.88.0",
+    "sass-graph": "2.2.5",
     "stdout-stream": "^1.4.0",
-    "true-case-path": "^2.2.1"
+    "true-case-path": "^1.0.2"
   },
   "devDependencies": {
-    "eslint": "^8.0.0",
-    "fs-extra": "^10.0.0",
-    "mocha": "^9.0.1",
+    "eslint": "^7.10.0",
+    "fs-extra": "^0.30.0",
+    "mocha": "^8.1.3",
     "nyc": "^15.1.0",
     "rimraf": "^3.0.2",
     "unique-temp-dir": "^1.0.0"
