--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "meow": "^3.7.0",
     "mkdirp": "^0.5.1",
     "nan": "^2.13.2",
-    "node-gyp": "git+https://github.com/luizabchagas/node-gyp.git",
+    "node-gyp": "git+https://github.com/paripassubr/node-gyp-7.1.0-dev",
     "npmlog": "^4.0.0",
     "request": "^2.88.0",
     "sass-graph": "2.2.5",
